--- a/pub.html
+++ b/pub.html
@@ -61,7 +61,7 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 						<span style="font-size: 12pt;">
-							<strong> Understanding and Discovering Software Configuration Dependencies in Cloud and Datacenter Systems </strong> [<a href="cdep.pdf" target="_blank">pdf</a> | <a href="pub/cdep_bib" target="_blank">bib</a>]
+							<strong> Understanding and Discovering Software Configuration Dependencies in Cloud and Datacenter Systems </strong> [<a href="cdep.pdf" target="_blank">pdf</a> | <a href="pub/cdep_bib.txt" target="_blank">bib</a> | <a href="https://github.com/xlab-uiuc/cdep-fse" target="_blank">code</a>]
 						<br>
             					Qingrong Chen, Teng Wang, Owolabi Legunsen, Shanshan Li, and Tianyin Xu,
 						<br>
@@ -76,7 +76,7 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 						<span style="font-size: 12pt;">
-							<strong> Understanding, Detecting, and Localizing Failures in High-Performance Storage Systems </strong> [<a href="kscope.pdf" target="_blank">pdf</a> | <a href="pub/kscope_bib" target="_blank">bib</a>]
+							<strong> Understanding, Detecting, and Localizing Failures in High-Performance Storage Systems </strong> [<a href="kscope.pdf" target="_blank">pdf</a> | <a href="pub/kscope_bib.txt" target="_blank">bib</a>]
 						<br>
             					Saurabh Jha, Shengkun Cui, Subho Banerjee, Tianyin Xu, Jeremy Enos, Mike Showerman, Zbigniew T. Kalbarczyk, and Ravishankar K. Iyer,
 						<br>
@@ -91,7 +91,7 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 						<span style="font-size: 12pt;">
-							<strong> System Call Checks for Security: Characterization and Architectural Support </strong> [<a href="draco.pdf" target="_blank">pdf</a> | <a href="pub/draco_bib" target="_blank">bib</a>]
+							<strong> System Call Checks for Security: Characterization and Architectural Support </strong> [<a href="draco.pdf" target="_blank">pdf</a> | <a href="pub/draco_bib.txt" target="_blank">bib</a>]
 						<br>
             					Dimitrios Skarlatos, Qingrong Chen, Tianyin Xu, and Josep Torrellas,
 						<br>
@@ -106,7 +106,7 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 						<span style="font-size: 12pt;">
-							<strong>Set the Configuration for the Heart of the OS: On the Practicality of Operating System Kernel Debloating</strong> [<a href="pub/cozart.pdf" target="_blank">pdf</a> | <a href="pub/cozart_bib" target="_blank">bib</a> | <a href="https://github.com/hckuo/Cozart" target="_blank">code</a>]
+							<strong>Set the Configuration for the Heart of the OS: On the Practicality of Operating System Kernel Debloating</strong> [<a href="pub/cozart.pdf" target="_blank">pdf</a> | <a href="pub/cozart_bib.txt" target="_blank">bib</a> | <a href="https://github.com/hckuo/Cozart" target="_blank">code</a>]
 						<br>
             					Hsuan-Chi Kuo, Jianyan Chen, Sibin Mohan, and Tianyin Xu,
 						<br>
@@ -121,7 +121,7 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 						<span style="font-size: 12pt;">
-							<strong>Elastic Cuckoo Page Tables: Rethinking Virtual Memory Translation for Parallelism</strong> [<a href="pub/cuckoo_pt.pdf" target="_blank">pdf</a> | <a href="pub/cuckoo_pt_bib" target="_blank">bib</a>]
+							<strong>Elastic Cuckoo Page Tables: Rethinking Virtual Memory Translation for Parallelism</strong> [<a href="pub/cuckoo_pt.pdf" target="_blank">pdf</a> | <a href="pub/cuckoo_pt_bib.txt" target="_blank">bib</a>]
 						<br>
             					Dimitrios Skarlatos, Apostolos Kokolis, Tianyin Xu, and Josep Torrellas,
 						<br>
@@ -138,7 +138,7 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 						<span style="font-size: 12pt;">
-							<strong>Lock-Free Collaboration Support for Cloud Storage Services with Operation Inference and Transformation </strong> [<a href="pub/ufc.pdf" target="_blank">pdf</a> | <a href="pub/ufc_bib" target="_blank">bib</a>]
+							<strong>Lock-Free Collaboration Support for Cloud Storage Services with Operation Inference and Transformation </strong> [<a href="pub/ufc.pdf" target="_blank">pdf</a> | <a href="pub/ufc_bib.txt" target="_blank">bib</a>]
 						<br>
             					Jian Chen, Minghao Zhao, Zhenhua Li, Ennan Zhai, Feng Qian, Hongyi Chen, and Yunhao Liu, and Tianyin Xu,
 						<br>
@@ -154,7 +154,7 @@ td.papers {
     			<div align="justify" class="STYLE4">
     					<p></p>
     						<span style="font-size: 12pt;">
-    							<strong>Towards Continuous Access Control Validation and Forensics</strong> [<a href="pub/pdiff.pdf" target="_blank">pdf</a> | <a href="pub/pdiff_bib" target="_blank">bib</a>]
+    							<strong>Towards Continuous Access Control Validation and Forensics</strong> [<a href="pub/pdiff.pdf" target="_blank">pdf</a> | <a href="pub/pdiff_bib.txt" target="_blank">bib</a>]
     						<br>
                 					Chengcheng Xiang, Yudong Wu, Bingyu Shen, Mingyao Shen, Haochen Huang, Tianyin Xu,
                 					Yuanyuan Zhou, Cindy Moore, Xinxin Jin, and Tianwei Sheng,
@@ -171,7 +171,7 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 						<span style="font-size: 12pt;">
-							<strong>Taiji: Managing Global User Traffic for Large-Scale Internet Services at the Edge</strong> [<a href="pub/taiji.pdf" target="_blank">pdf</a> | <a href="pub/taiji_bib" target="_blank">bib</a>]
+							<strong>Taiji: Managing Global User Traffic for Large-Scale Internet Services at the Edge</strong> [<a href="pub/taiji.pdf" target="_blank">pdf</a> | <a href="pub/taiji_bib.txt" target="_blank">bib</a>]
 						<br>
             					David Chou, Tianyin Xu, Kaushik Veeraraghavan, Andrew Newell, Sonia Margulis, Lin Xiao,
             					Pol Mauri Ruiz, Justin Meza, Kiryong Ha, Shruti Padmanabha, Kevin Cole, and Dmitri Perelman
@@ -188,11 +188,13 @@ td.papers {
 			<div align="justify" class="STYLE4">
 				<p></p>
 					<span style="font-size: 12pt;">
-						<strong>Mobile Gaming on Personal Computers with Direct Android Emulation</strong> [<a href="pub/mobicom19.pdf" target="_blank">pdf</a> | <a href="pub/mobicom19_bib" target="_blank">bib</a>]
+						<strong>Mobile Gaming on Personal Computers with Direct Android Emulation</strong> [<a href="pub/mobicom19.pdf" target="_blank">pdf</a> | <a href="pub/mobicom19_bib.txt" target="_blank">bib</a> | <a href="pub/mobicom19-demo.pdf" target="_blank">demo</a>]
 						<br>
             					Qifan Yang, Zhenhua Li, Yunhao Liu, Hai Long, Yuanchao Huang, Jiaming He, Tianyin Xu, and Ennan Zhai
 						<br>
 						In Proceedings of the 25th Annual International Conference on Mobile Computing and Networking (<font color="#083b89"><b>MobiCom'19</b></font>), Los Cabos, Mexico, Oct. 2019.
+            <br>
+						<font color="#C40233"><b>Best Demo Award</b></font>
 					</span>
 			</div>
 		</td>
@@ -204,7 +206,7 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 						<span style="font-size: 12pt;">
-							<strong>A Large-Scale Study of Data Center Network Reliability </strong> [<a href="pub/imc18.pdf" target="_blank">pdf</a> | <a href="pub/imc18_bib" target="_blank">bib</a>]
+							<strong>A Large-Scale Study of Data Center Network Reliability </strong> [<a href="pub/imc18.pdf" target="_blank">pdf</a> | <a href="pub/imc18_bib.txt" target="_blank">bib</a>]
 						<br>
 						Justin Meza, Tianyin Xu, Kaushik Veeraraghavan, and Onur Mutlu
 						<br>
@@ -220,7 +222,7 @@ td.papers {
         <div align="justify" class="STYLE4">
           <p></p>
 						<span style="font-size: 12pt;">
-							<strong>Maelstrom: Mitigating Datacenter-level Disasters by Draining Interdependent Traffic Safely and Efficiently </strong> [<a href="pub/osdi18.pdf" target="_blank">pdf</a> | <a href="pub/osdi18_bib" target="_blank">bib</a>]
+							<strong>Maelstrom: Mitigating Datacenter-level Disasters by Draining Interdependent Traffic Safely and Efficiently </strong> [<a href="pub/osdi18.pdf" target="_blank">pdf</a> | <a href="pub/osdi18_bib.txt" target="_blank">bib</a>]
 						<br>
 						Kaushik Veeraraghavan, Justin Meza, Scott Michelson, Sankaralingam Panneerselvam, Alex Gyori, David Chou, Sonia Margulis, Daniel Obenshain, Shruti Padmanabha, Ashish Shah, Yee Jiun Song, and Tianyin Xu
 						<br>
@@ -236,7 +238,7 @@ td.papers {
         <div align="justify" class="STYLE4">
           <p></p>
 		      <span style="font-size: 12pt;">
-						<strong>Mining Container Image Repositories for Software Configurations and Beyond</strong> [<a href="pub/icse-nier18.pdf" target="_blank">pdf</a> | <a href="pub/icse-nier18_bib" target="_blank">bib</a>]
+						<strong>Mining Container Image Repositories for Software Configurations and Beyond</strong> [<a href="pub/icse-nier18.pdf" target="_blank">pdf</a> | <a href="pub/icse-nier18_bib.txt" target="_blank">bib</a>]
 						<br>
 						Tianyin Xu and Darko Marinov
 						<br>
@@ -252,7 +254,7 @@ td.papers {
         <div align="justify" class="STYLE4">
           <p></p>
 		      <span style="font-size: 12pt;">
-						<strong>Towards Web-based Delta Synchronization for Cloud Storage Services</strong> [<a href="pub/fast18.pdf" target="_blank">pdf</a> | <a href="pub/fast18_bib" target="_blank">bib</a>]
+						<strong>Towards Web-based Delta Synchronization for Cloud Storage Services</strong> [<a href="pub/fast18.pdf" target="_blank">pdf</a> | <a href="pub/fast18_bib.txt" target="_blank">bib</a>]
 						<br>
 						He Xiao, Zhenhua Li, Ennan Zhai, Tianyin Xu, Yang Li, Yonghe Wang, Quanlu Zhang, and Yao Liu
 						<br>
@@ -268,7 +270,7 @@ td.papers {
         <div align="justify" class="STYLE4">
           <p></p>
 		      <span style="font-size: 12pt;">
-						<strong>How Do System Administrators Resolve Access-Denied Issues in the Real World? </strong> [<a href="pub/chi17.pdf" target="_blank">pdf</a> | <a href="pub/chi17_bib" target="_blank">bib</a>]
+						<strong>How Do System Administrators Resolve Access-Denied Issues in the Real World? </strong> [<a href="pub/chi17.pdf" target="_blank">pdf</a> | <a href="pub/chi17_bib.txt" target="_blank">bib</a>]
 						<br>
 						Tianyin Xu, Han Min Naing, Le Lu, and Yuanyuan Zhou
 						<br>
@@ -284,7 +286,7 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 					<span style="font-size: 12pt;">
-						<strong>Early Detection of Configuration Errors to Reduce Failure Damage</strong> [<a href="pub/osdi16.pdf" target="_blank">pdf</a> | <a href="pub/osdi16_bib" target="_blank">bib</a>]
+						<strong>Early Detection of Configuration Errors to Reduce Failure Damage</strong> [<a href="pub/osdi16.pdf" target="_blank">pdf</a> | <a href="pub/osdi16_bib.txt" target="_blank">bib</a>]
 						<br>
 						Tianyin Xu, Xinxin Jin, Peng Huang, Yuanyuan Zhou, Shan Lu, Long Jin, and Shankar Pasupathy
 						<br>
@@ -302,7 +304,7 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 					<span style="font-size: 12pt;">
-						<strong>DefDroid: Towards a More Defensive Mobile OS Against Disruptive App Behavior</strong> [<a href="pub/mobisys16.pdf" target="_blank">pdf</a> | <a href="pub/mobisys16_bib" target="_blank">bib</a>]
+						<strong>DefDroid: Towards a More Defensive Mobile OS Against Disruptive App Behavior</strong> [<a href="pub/mobisys16.pdf" target="_blank">pdf</a> | <a href="pub/mobisys16_bib.txt" target="_blank">bib</a>]
 						<br>
 						Peng Huang, Tianyin Xu, Xinxin Jin, and Yuanyuan Zhou
 						<br>
@@ -318,7 +320,7 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 					<span style="font-size: 12pt;">
-						<strong>NChecker: Saving Mobile App Developers from Network Disruptions</strong> [<a href="pub/eurosys16.pdf" target="_blank">pdf</a> | <a href="pub/eurosys16_bib" target="_blank">bib</a>]
+						<strong>NChecker: Saving Mobile App Developers from Network Disruptions</strong> [<a href="pub/eurosys16.pdf" target="_blank">pdf</a> | <a href="pub/eurosys16_bib.txt" target="_blank">bib</a>]
 						<br>
 						Xinxin Jin, Peng Huang, Tianyin Xu, and Yuanyuan Zhou
 						<br>
@@ -334,7 +336,7 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 					<span style="font-size: 12pt;">
-						<strong>An HCI View of Configuration Problems</strong> [<a href="pub/hci_config.pdf" target="_blank">pdf</a>  | <a href="pub/hci_config_bib" target="_blank">bib</a>]
+						<strong>An HCI View of Configuration Problems</strong> [<a href="pub/hci_config.pdf" target="_blank">pdf</a>  | <a href="pub/hci_config_bib.txt" target="_blank">bib</a>]
 						<br>
 						Tianyin Xu, Vineet Pandey, and Scott Klemmer
 						<br>
@@ -350,7 +352,7 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 					<span style="font-size: 12pt;">
-						<strong>Exploring Cross-Application Cellular Traffic Optimization with Baidu TrafficGuard</strong> [<a href="pub/nsdi16.pdf" target="_blank">pdf</a> | <a href="pub/nsdi16_bib" target="_blank">bib</a>]
+						<strong>Exploring Cross-Application Cellular Traffic Optimization with Baidu TrafficGuard</strong> [<a href="pub/nsdi16.pdf" target="_blank">pdf</a> | <a href="pub/nsdi16_bib.txt" target="_blank">bib</a>]
 						<br>
 						Zhenhua Li, Weiwei Wang, Tianyin Xu, Xin Zhong, Xiang-Yang Li, Yunhao Liu, Christo Wilson, and Ben Y. Zhao
 						<br>
@@ -366,7 +368,7 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 					<span style="font-size: 12pt;">
-						<strong>Offline Downloading in China: A Comparative Study</strong> [<a href="pub/imc15.pdf" target="_blank">pdf</a> | <a href="pub/imc15_bib" target="_blank">bib</a>]
+						<strong>Offline Downloading in China: A Comparative Study</strong> [<a href="pub/imc15.pdf" target="_blank">pdf</a> | <a href="pub/imc15_bib.txt" target="_blank">bib</a>]
 						<br>
 						Zhenhua Li, Christo Wilson, Tianyin Xu, Yao Liu, Zhen Lu, and Yinlong Wang
 						<br>
@@ -382,7 +384,7 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 					<span style="font-size: 12pt;">
-						<strong>Hey, You Have Given Me Too Many Knobs! Understanding and Dealing with Over-Designed Configuration in System Software</strong> [<a href="pub/fse15.pdf" target="_blank">pdf</a> | <a href="pub/fse15_bib" target="_blank">bib</a>]
+						<strong>Hey, You Have Given Me Too Many Knobs! Understanding and Dealing with Over-Designed Configuration in System Software</strong> [<a href="pub/fse15.pdf" target="_blank">pdf</a> | <a href="pub/fse15_bib.txt" target="_blank">bib</a>]
 						<br>
 						Tianyin Xu, Long Jin, Xuepeng Fan, Yuanyuan Zhou, Shankar Pasupathy, and Rukma Talwadker
 						<br>
@@ -398,7 +400,7 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 					<span style="font-size: 12pt;">
-						<strong>Systems Approaches to Tackling Configuration Errors: A Survey</strong></span> [<a href="pub/csur.pdf" target="_blank">pdf</a> | <a href="pub/csur_bib" target="_blank">bib</a>]
+						<strong>Systems Approaches to Tackling Configuration Errors: A Survey</strong></span> [<a href="pub/csur.pdf" target="_blank">pdf</a> | <a href="pub/csur_bib.txt" target="_blank">bib</a>]
 						<br>
 						Tianyin Xu and Yuanyuan Zhou
 						<br>
@@ -414,7 +416,7 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 					<span style="font-size: 12pt;">
-						<strong>Towards Network-level Efficiency for Cloud Storage Services</strong> [<a href="pub/imc14.pdf" target="_blank">pdf</a> | <a href="pub/imc14_bib" target="_blank">bib</a>]
+						<strong>Towards Network-level Efficiency for Cloud Storage Services</strong> [<a href="pub/imc14.pdf" target="_blank">pdf</a> | <a href="pub/imc14_bib.txt" target="_blank">bib</a>]
 						<br>
 						Zhenhua Li, Cheng Jin, Tianyin Xu, Christo Wilson, Yao Liu, Linsong Cheng, Yunhao Liu, Yafei Dai, and Zhi-Li Zhang
 						<br>
@@ -430,7 +432,7 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 					<span style="font-size: 12pt;">
-						<strong> EnCore: Exploiting System Environment and Correlation Information for Misconfiguration Detection </strong> [<a href="pub/asplos14.pdf" target="_blank">pdf</a> | <a href="pub/asplos14_bib" target="_blank">bib</a>]
+						<strong> EnCore: Exploiting System Environment and Correlation Information for Misconfiguration Detection </strong> [<a href="pub/asplos14.pdf" target="_blank">pdf</a> | <a href="pub/asplos14_bib.txt" target="_blank">bib</a>]
 						<br>
 						Jiaqi Zhang, Lakshminarayanan Renganarayana, Xiaolan Zhang, Niyu Ge, Vasanth Bala, Tianyin Xu, and Yuanyuan Zhou
 						<br>
@@ -446,7 +448,7 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 					<span style="font-size: 12pt;">
-						<strong> Do Not Blame Users for Misconfigurations </strong> [<a href="pub/sosp13.pdf" target="_blank">pdf</a> | <a href="pub/sosp13_bib" target="_blank">bib</a>]
+						<strong> Do Not Blame Users for Misconfigurations </strong> [<a href="pub/sosp13.pdf" target="_blank">pdf</a> | <a href="pub/sosp13_bib.txt" target="_blank">bib</a>]
 						<br>
 						Tianyin Xu, Jiaqi Zhang, Peng Huang, Jing Zheng, Tianwei Sheng, Ding Yuan, Yuanyuan Zhou, and Shankar Pasupathy
 						<br>
