--- a/index.html
+++ b/index.html
@@ -436,6 +436,7 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
                                   <p class="STYLE223">Xudong Sun</p>
 				  <p class="STYLE223">Jack Chen</p>
 				  <p class="STYLE223">Andrew Yoo</p>
+				  <p class="STYLE223">Zhanghao Chen</p>
                              </TD>
                           </TR>
 
