--- a/pub.html
+++ b/pub.html
@@ -55,6 +55,21 @@ td.papers {
 <table width="90%" align="center" border="0" height="1">
   <!--DWLayoutTable-->
   <tbody>
+	  
+    <td class="date"><font color="#083b89">OSDI'20</font></td>
+  		<td class="papers">
+				<div align="justify" class="STYLE4">
+					<p></p>
+						<span style="font-size: 12pt;">
+							<strong> Understanding and Discovering Software Configuration Dependencies in Cloud and Datacenter Systems </strong> [<a href="ctest.pdf" target="_blank">pdf</a> | <a href="pub/ctest_bib.txt" target="_blank">bib</a>]
+						<br>
+            					Xudong Sun, Runxiang Cheng, Jianyan Chen, Ran Ang, Owolabi Legunsen, and Tianyin Xu,
+						<br>
+						In Proceedings of the 14th USENIX Symposium on Operating Systems Design and Implementation (<font color="#083b89"><b>OSDI'20</b></font>), Banff, Alberta, Canada, Nov. 2020.
+					</span>
+				</div>
+			</td>
+		</tr>
 
     <td class="date"><font color="#083b89">FSE'20</font></td>
   		<td class="papers">
