--- a/pub.html
+++ b/pub.html
@@ -63,9 +63,11 @@ td.papers {
 						<span style="font-size: 12pt;">
 							<strong> Understanding and Discovering Software Configuration Dependencies in Cloud and Datacenter Systems </strong> [<a href="ctest.pdf" target="_blank">pdf</a> | <a href="pub/ctest_bib.txt" target="_blank">bib</a>]
 						<br>
-            					Xudong Sun, Runxiang Cheng, Jianyan Chen, Ran Ang, Owolabi Legunsen, and Tianyin Xu,
+            					Xudong Sun*, Runxiang Cheng*, Jianyan Chen, Ran Ang, Owolabi Legunsen, and Tianyin Xu,
 						<br>
 						In Proceedings of the 14th USENIX Symposium on Operating Systems Design and Implementation (<font color="#083b89"><b>OSDI'20</b></font>), Banff, Alberta, Canada, Nov. 2020.
+						<br>
+						*co-primary
 					</span>
 				</div>
 			</td>
