--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
 				  <p class="STYLE223"><a href="https://wenyu.io/" target="_blank">Wenyu Wang</a>, co-advised by Professor <a href="http://taoxie.cs.illinois.edu/" target="_blank">Tao Xie</a></p>
                                   <p class="STYLE223">Neil Zhao, co-advised by Professor <a href="http://taoxie.cs.illinois.edu/" target="_blank">Tao Xie</a></p>
                                   <p class="STYLE223">Sam Cheng, co-advised by Professor <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a></p>
-                                  <p class="STYLE223">Xudong Sun</p>
+                                  <p class="STYLE223"><a href="https://marshtompsxd.github.io/" target="_blank">Xudong Sun</a></p>
 				  <p class="STYLE223">Jack Chen</p>
 				  <p class="STYLE223">Andrew Yoo</p>
 				  <p class="STYLE223">Zhanghao Chen</p>
