--- a/pub.html
+++ b/pub.html
@@ -65,7 +65,7 @@ td.papers {
 						<br>
             					Xudong Sun*, Runxiang Cheng*, Jianyan Chen, Ran Ang, Owolabi Legunsen, and Tianyin Xu, (*co-primary)
 						<br>
-						In Proceedings of the 14th USENIX Symposium on Operating Systems Design and Implementation (<font color="#083b89"><b>OSDI'20</b></font>), Banff, Alberta, Canada, Nov. 2020.
+						(To appear) In Proceedings of the 14th USENIX Symposium on Operating Systems Design and Implementation (<font color="#083b89"><b>OSDI'20</b></font>), Banff, Alberta, Canada, Nov. 2020.
 					</span>
 				</div>
 			</td>
@@ -80,7 +80,7 @@ td.papers {
 						<br>
             					Qingrong Chen, Teng Wang, Owolabi Legunsen, Shanshan Li, and Tianyin Xu,
 						<br>
-						In Proceedings of the 2020 ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering (<font color="#083b89"><b>ESEC/FSE'20</b></font>), Sacramento, California, Nov. 2020.
+						(To appear) In Proceedings of the 2020 ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering (<font color="#083b89"><b>ESEC/FSE'20</b></font>), Sacramento, California, Nov. 2020.
 					</span>
 				</div>
 			</td>
@@ -95,7 +95,7 @@ td.papers {
 						<br>
             					Saurabh Jha, Shengkun Cui, Subho Banerjee, Tianyin Xu, Jeremy Enos, Mike Showerman, Zbigniew T. Kalbarczyk, and Ravishankar K. Iyer,
 						<br>
-						In Proceedings of the International Conference for High-Performance Computing, Networking, Storage and Analysis  (<font color="#083b89"><b>SC'20</b></font>), Atlanta, GA, Nov. 2020.
+						(To appear) In Proceedings of the International Conference for High-Performance Computing, Networking, Storage and Analysis  (<font color="#083b89"><b>SC'20</b></font>), Atlanta, GA, Nov. 2020.
 					</span>
 				</div>
 			</td>
@@ -110,7 +110,7 @@ td.papers {
 						<br>
             					Dimitrios Skarlatos, Qingrong Chen, Tianyin Xu, and Josep Torrellas,
 						<br>
-						In Proceedings of the 53rd IEEE/ACM International Symposium on Microarchitecture (<font color="#083b89"><b>MICRO-53</b></font>), Athens, Greece, Oct. 2020.
+						(To appear) In Proceedings of the 53rd IEEE/ACM International Symposium on Microarchitecture (<font color="#083b89"><b>MICRO-53</b></font>), Athens, Greece, Oct. 2020.
 					</span>
 				</div>
 			</td>
