--- a/index.html
+++ b/index.html
@@ -437,6 +437,8 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
 				  <p class="STYLE223">Jack Chen</p>
 				  <p class="STYLE223">Andrew Yoo</p>
 				  <p class="STYLE223">Zhanghao Chen</p>
+				  <p class="STYLE223">Lilia Tang</p>
+				  <p class="STYLE223">Jinghao Jia</p>
                              </TD>
                           </TR>
 
