--- a/index.html
+++ b/index.html
@@ -337,6 +337,8 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
 						  <TD class=content_title>&nbsp;</TD>
 					      <TD class=content width="96%">
 						        <p class="STYLE223">Fall 2020 <a href="https://cs523-uiuc.github.io/fall20/" target="_blank">CS 523: Advanced Operating Systems</a></p>
+						        <p class="STYLE223">Fall 2020 <a href="https://systems-seminar-uiuc.github.io/fall20/" target="_blank">CS 591(IG): System Reading Group (together with Distributed System Seminar)</a></p>
+						        <p class="STYLE223">Fall 2020 <a href="https://wiki.illinois.edu//wiki/display/SoftEng" target="_blank">CS 591(SE): Software Engineering Seminar</a></p>
 						        <p class="STYLE223">Spring 2020 <a href="https://cs423-uiuc.github.io/spring20/" target="_blank">CS 423: Operating System Design</a></p>
 						        <p class="STYLE223">Spring 2020 <a href="https://systems-seminar-uiuc.github.io/spring20/" target="_blank">CS 591(IG): System Reading Group (together with Distributed System Seminar)</a></p>
 						        <p class="STYLE223">Spring 2020 <a href="https://wiki.illinois.edu//wiki/display/SoftEng" target="_blank">CS 591(SE): Software Engineering Seminar</a></p>
