--- a/pub.html
+++ b/pub.html
@@ -63,7 +63,7 @@ td.papers {
 						<span style="font-size: 12pt;">
 							<strong>Testing Configuration Changes in Context to Prevent Production Failures </strong> [<a href="ctest.pdf" target="_blank">pdf</a> | <a href="pub/ctest_bib.txt" target="_blank">bib</a>]
 						<br>
-            					Xudong Sun*, Runxiang Cheng*, Jianyan Chen, Ran Ang, Owolabi Legunsen, and Tianyin Xu, (*co-primary)
+            					Xudong Sun*, Runxiang Cheng*, Jianyan Chen, Elaine Ang, Owolabi Legunsen, and Tianyin Xu, (*co-primary)
 						<br>
 						(To appear) In Proceedings of the 14th USENIX Symposium on Operating Systems Design and Implementation (<font color="#083b89"><b>OSDI'20</b></font>), Banff, Alberta, Canada, Nov. 2020.
 					</span>
