--- a/pub.html
+++ b/pub.html
@@ -76,7 +76,7 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 						<span style="font-size: 12pt;">
-							<strong> Understanding and Discovering Software Configuration Dependencies in Cloud and Datacenter Systems </strong> [<a href="cdep.pdf" target="_blank">pdf</a> | <a href="pub/cdep_bib.txt" target="_blank">bib</a> | <a href="https://github.com/xlab-uiuc/cdep-fse" target="_blank">code</a>]
+							<strong>Understanding and Discovering Software Configuration Dependencies in Cloud and Datacenter Systems</strong> [<a href="cdep.pdf" target="_blank">pdf</a> | <a href="pub/cdep_bib.txt" target="_blank">bib</a> | <a href="https://github.com/xlab-uiuc/cdep-fse" target="_blank">code</a>]
 						<br>
             					Qingrong Chen, Teng Wang, Owolabi Legunsen, Shanshan Li, and Tianyin Xu,
 						<br>
@@ -91,7 +91,7 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 						<span style="font-size: 12pt;">
-							<strong> Understanding, Detecting, and Localizing Failures in High-Performance Storage Systems </strong> [<a href="kscope.pdf" target="_blank">pdf</a> | <a href="pub/kscope_bib.txt" target="_blank">bib</a>]
+							<strong>Live Forensics for HPC Systems: A Case Study on Distributed Storage Systems</strong> [<a href="kscope.pdf" target="_blank">pdf</a> | <a href="pub/kscope_bib.txt" target="_blank">bib</a>]
 						<br>
             					Saurabh Jha, Shengkun Cui, Subho Banerjee, Tianyin Xu, Jeremy Enos, Mike Showerman, Zbigniew T. Kalbarczyk, and Ravishankar K. Iyer,
 						<br>
