--- a/travel.html
+++ b/travel.html
@@ -382,6 +382,7 @@ div.Section1
 						     <li>Lake Tahoe (north &amp; south), CA / NV (2018) </li>
 						     <li>Laramie, WY (2018) </li>
 						     <li>Los Angeles, CA (2012, 2016) </li>
+					             <li>Marshall, IN (2020) </li>
 						     <li>Menlo Park, CA (2017-2018) </li>
 						     <li>Millbrae, CA (2018)</li>
                                                      <li>Monterey, CA (2015) </li>
