--- a/pub.html
+++ b/pub.html
@@ -91,7 +91,7 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 						<span style="font-size: 12pt;">
-						<strong>Live Forensics for HPC Systems: A Case Study on Distributed Storage Systems</strong> [<a href="kscope.pdf" target="_blank">pdf</a> | <a href="pub/kscope_bib.txt" target="_blank">bib</a>]
+						<strong>Live Forensics for HPC Systems: A Case Study on Distributed Storage Systems</strong> [<a href="pub/kscope.pdf" target="_blank">pdf</a> | <a href="pub/kscope_bib.txt" target="_blank">bib</a>]
 						<br>
             					Saurabh Jha, Shengkun Cui, Subho Banerjee, Tianyin Xu, Jeremy Enos, Mike Showerman, Zbigniew T. Kalbarczyk, and Ravishankar K. Iyer,
 						<br>
