--- a/pub.html
+++ b/pub.html
@@ -55,7 +55,7 @@ td.papers {
 <table width="90%" align="center" border="0" height="1">
   <!--DWLayoutTable-->
   <tbody>
-	  
+
     <td class="date"><font color="#083b89">OSDI'20</font></td>
   		<td class="papers">
 				<div align="justify" class="STYLE4">
@@ -203,7 +203,7 @@ td.papers {
 			<div align="justify" class="STYLE4">
 				<p></p>
 					<span style="font-size: 12pt;">
-						<strong>Mobile Gaming on Personal Computers with Direct Android Emulation</strong> [<a href="pub/mobicom19.pdf" target="_blank">pdf</a> | <a href="pub/mobicom19_bib.txt" target="_blank">bib</a> | <a href="pub/mobicom19-demo.pdf" target="_blank">demo</a>]
+						<strong>Mobile Gaming on Personal Computers with Direct Android Emulation</strong> [<a href="pub/daow.pdf" target="_blank">pdf</a> | <a href="pub/daow_bib.txt" target="_blank">bib</a> | <a href="pub/mobicom19-demo.pdf" target="_blank">demo</a>]
 						<br>
             					Qifan Yang, Zhenhua Li, Yunhao Liu, Hai Long, Yuanchao Huang, Jiaming He, Tianyin Xu, and Ennan Zhai
 						<br>
@@ -237,7 +237,7 @@ td.papers {
         <div align="justify" class="STYLE4">
           <p></p>
 						<span style="font-size: 12pt;">
-							<strong>Maelstrom: Mitigating Datacenter-level Disasters by Draining Interdependent Traffic Safely and Efficiently </strong> [<a href="pub/osdi18.pdf" target="_blank">pdf</a> | <a href="pub/osdi18_bib.txt" target="_blank">bib</a>]
+							<strong>Maelstrom: Mitigating Datacenter-level Disasters by Draining Interdependent Traffic Safely and Efficiently </strong> [<a href="pub/maelstrom.pdf" target="_blank">pdf</a> | <a href="pub/maelstrom_bib.txt" target="_blank">bib</a>]
 						<br>
 						Kaushik Veeraraghavan, Justin Meza, Scott Michelson, Sankaralingam Panneerselvam, Alex Gyori, David Chou, Sonia Margulis, Daniel Obenshain, Shruti Padmanabha, Ashish Shah, Yee Jiun Song, and Tianyin Xu
 						<br>
@@ -301,7 +301,7 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 					<span style="font-size: 12pt;">
-						<strong>Early Detection of Configuration Errors to Reduce Failure Damage</strong> [<a href="pub/osdi16.pdf" target="_blank">pdf</a> | <a href="pub/osdi16_bib.txt" target="_blank">bib</a>]
+						<strong>Early Detection of Configuration Errors to Reduce Failure Damage</strong> [<a href="pub/pcheck.pdf" target="_blank">pdf</a> | <a href="pub/pcheck_bib.txt" target="_blank">bib</a>]
 						<br>
 						Tianyin Xu, Xinxin Jin, Peng Huang, Yuanyuan Zhou, Shan Lu, Long Jin, and Shankar Pasupathy
 						<br>
@@ -335,7 +335,7 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 					<span style="font-size: 12pt;">
-						<strong>NChecker: Saving Mobile App Developers from Network Disruptions</strong> [<a href="pub/eurosys16.pdf" target="_blank">pdf</a> | <a href="pub/eurosys16_bib.txt" target="_blank">bib</a>]
+						<strong>NChecker: Saving Mobile App Developers from Network Disruptions</strong> [<a href="pub/nchecker.pdf" target="_blank">pdf</a> | <a href="pub/nchecker_bib.txt" target="_blank">bib</a>]
 						<br>
 						Xinxin Jin, Peng Huang, Tianyin Xu, and Yuanyuan Zhou
 						<br>
@@ -367,7 +367,7 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 					<span style="font-size: 12pt;">
-						<strong>Exploring Cross-Application Cellular Traffic Optimization with Baidu TrafficGuard</strong> [<a href="pub/nsdi16.pdf" target="_blank">pdf</a> | <a href="pub/nsdi16_bib.txt" target="_blank">bib</a>]
+						<strong>Exploring Cross-Application Cellular Traffic Optimization with Baidu TrafficGuard</strong> [<a href="pub/tg.pdf" target="_blank">pdf</a> | <a href="pub/tg_bib.txt" target="_blank">bib</a>]
 						<br>
 						Zhenhua Li, Weiwei Wang, Tianyin Xu, Xin Zhong, Xiang-Yang Li, Yunhao Liu, Christo Wilson, and Ben Y. Zhao
 						<br>
@@ -399,7 +399,7 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 					<span style="font-size: 12pt;">
-						<strong>Hey, You Have Given Me Too Many Knobs! Understanding and Dealing with Over-Designed Configuration in System Software</strong> [<a href="pub/fse15.pdf" target="_blank">pdf</a> | <a href="pub/fse15_bib.txt" target="_blank">bib</a>]
+						<strong>Hey, You Have Given Me Too Many Knobs! Understanding and Dealing with Over-Designed Configuration in System Software</strong> [<a href="pub/knobs.pdf" target="_blank">pdf</a> | <a href="pub/knobs_bib.txt" target="_blank">bib</a>]
 						<br>
 						Tianyin Xu, Long Jin, Xuepeng Fan, Yuanyuan Zhou, Shankar Pasupathy, and Rukma Talwadker
 						<br>
@@ -447,7 +447,7 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 					<span style="font-size: 12pt;">
-						<strong> EnCore: Exploiting System Environment and Correlation Information for Misconfiguration Detection </strong> [<a href="pub/asplos14.pdf" target="_blank">pdf</a> | <a href="pub/asplos14_bib.txt" target="_blank">bib</a>]
+						<strong> EnCore: Exploiting System Environment and Correlation Information for Misconfiguration Detection </strong> [<a href="pub/encore.pdf" target="_blank">pdf</a> | <a href="pub/encore_bib.txt" target="_blank">bib</a>]
 						<br>
 						Jiaqi Zhang, Lakshminarayanan Renganarayana, Xiaolan Zhang, Niyu Ge, Vasanth Bala, Tianyin Xu, and Yuanyuan Zhou
 						<br>
@@ -463,7 +463,7 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 					<span style="font-size: 12pt;">
-						<strong> Do Not Blame Users for Misconfigurations </strong> [<a href="pub/sosp13.pdf" target="_blank">pdf</a> | <a href="pub/sosp13_bib.txt" target="_blank">bib</a>]
+						<strong> Do Not Blame Users for Misconfigurations </strong> [<a href="pub/spex.pdf" target="_blank">pdf</a> | <a href="pub/spex_bib.txt" target="_blank">bib</a>]
 						<br>
 						Tianyin Xu, Jiaqi Zhang, Peng Huang, Jing Zheng, Tianwei Sheng, Ding Yuan, Yuanyuan Zhou, and Shankar Pasupathy
 						<br>
