--- a/pub.html
+++ b/pub.html
@@ -203,7 +203,7 @@ td.papers {
 			<div align="justify" class="STYLE4">
 				<p></p>
 					<span style="font-size: 12pt;">
-						<strong>Mobile Gaming on Personal Computers with Direct Android Emulation</strong> [<a href="pub/daow.pdf" target="_blank">pdf</a> | <a href="pub/daow_bib.txt" target="_blank">bib</a> | <a href="pub/mobicom19-demo.pdf" target="_blank">demo</a>]
+						<strong>Mobile Gaming on Personal Computers with Direct Android Emulation</strong> [<a href="pub/daow.pdf" target="_blank">pdf</a> | <a href="pub/daow_bib.txt" target="_blank">bib</a> | <a href="pub/daow-demo.pdf" target="_blank">demo</a>]
 						<br>
             					Qifan Yang, Zhenhua Li, Yunhao Liu, Hai Long, Yuanchao Huang, Jiaming He, Tianyin Xu, and Ennan Zhai
 						<br>
