--- a/pub.html
+++ b/pub.html
@@ -106,7 +106,7 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 						<span style="font-size: 12pt;">
-						<strong> Draco: Architectural and Operating System Support for System Call Security </strong> [<a href="draco.pdf" target="_blank">pdf</a> | <a href="pub/draco_bib.txt" target="_blank">bib</a>]
+						<strong> Draco: Architectural and Operating System Support for System Call Security </strong> [<a href="pub/draco.pdf" target="_blank">pdf</a> | <a href="pub/draco_bib.txt" target="_blank">bib</a>]
 						<br>
             					Dimitrios Skarlatos, Qingrong Chen, Jianyan Chen, Tianyin Xu, and Josep Torrellas,
 						<br>
