--- a/index.html
+++ b/index.html
@@ -441,6 +441,7 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
 				  <p class="STYLE223">Zhanghao Chen</p>
 				  <p class="STYLE223">Lilia Tang</p>
 				  <p class="STYLE223">Jinghao Jia</p>
+				  <p class="STYLE223">YiFei Zhu</p>
                              </TD>
                           </TR>
 
