--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
                                   <p class="STYLE223"><a href="https://marshtompsxd.github.io/" target="_blank">Xudong Sun</a></p>
 				  <p class="STYLE223">Jack Chen</p>
 				  <p class="STYLE223">Andrew Yoo</p>
-				  <p class="STYLE223">Zhanghao Chen</p>
+				  <p class="STYLE223"><a href="https://x-czh.github.io/" target="_blank">Zhanghao Chen</a></p>
 				  <p class="STYLE223">Lilia Tang</p>
 				  <p class="STYLE223">Jinghao Jia</p>
 				  <p class="STYLE223">YiFei Zhu</p>
