--- a/report.html
+++ b/report.html
@@ -71,7 +71,9 @@ div.Section1
   <tbody><tr>
     <td width="5%"><!--DWLayoutEmptyCell-->&nbsp;</td>
   	<td valign="top" width="90%">
-As a systems researcher, my mission is to help improve the real-world software systems, especially regarding reliability and usability. The following list a number of the issues that were reported by us and have been confirmed and/or fixed by the developers. Yes, we reported much much more. Unfortunately, many of them (especially those usability issues) are ignored or refused by the developers.
+	Our mission is to help improve the real-world software systems. 
+	The following list the issues that were reported by us and have been confirmed and/or fixed by the developers. 
+	Yes, we reported much much more. Unfortunately, many of them (especially those usability issues) are ignored.
 		<p class="style2"><font face="Times New Roman">
 		<span class="type"><span style="font-style: normal;"><font size="4" color="#083b89">MySQL Database Server</font></span></span></font></p>
 		<blockquote>
