--- a/report.html
+++ b/report.html
@@ -71,9 +71,7 @@ div.Section1
   <tbody><tr>
     <td width="5%"><!--DWLayoutEmptyCell-->&nbsp;</td>
   	<td valign="top" width="90%">
-	Our mission is to help improve the real-world software systems. 
-	The following list the issues that were reported by us and have been confirmed and/or fixed by the developers. 
-	Yes, we reported much much more. Unfortunately, many of them (especially those usability issues) are ignored.
+	The following list the issues that were found through our research projects and have been confirmed and/or fixed by the developers. 
 		<p class="style2"><font face="Times New Roman">
 		<span class="type"><span style="font-style: normal;"><font size="4" color="#083b89">MySQL Database Server</font></span></span></font></p>
 		<blockquote>
