--- a/pub.html
+++ b/pub.html
@@ -96,6 +96,8 @@ td.papers {
             					Saurabh Jha, Shengkun Cui, Subho Banerjee, Tianyin Xu, Jeremy Enos, Mike Showerman, Zbigniew T. Kalbarczyk, and Ravishankar K. Iyer,
 						<br>
 						(To appear) In Proceedings of the International Conference for High-Performance Computing, Networking, Storage and Analysis  (<font color="#083b89"><b>SC'20</b></font>), Atlanta, GA, Nov. 2020.
+					        <br>
+						<font color="#C40233"><b>Nominated for both Best Paper and Best Student Paper</b></font>
 					</span>
 				</div>
 			</td>
